--- a/style.css
+++ b/style.css
@@ -1,2 +1,43 @@
 
 
+body {
+    background-color: rgb(20, 18, 18);
+    color: rgb(94, 207, 72);
+}
+
+.terminal-input {
+    width: 50%;
+    background-color: rgb(20, 18, 18);
+    color: rgb(39, 175, 12);
+    font-size: 20px;
+
+    border: 1px solid rgb(255, 255, 255);
+    /* border: 0px rgb(20, 18, 18); */
+}
+
+.terminal-output {
+    width: 50%;
+    margin-left: 10%;
+    font-size: 20px;
+}
+
+/* .terminal-input::before {
+    content: "user@johnburtonterminal";
+    color: rgb(39, 175, 12);
+} */
+
+#command-line::before {
+    content: "user@terminal:~$";
+    color: rgb(39, 175, 12);
+    margin-left: 7%;
+    font-size: 20px;
+    font-family: "Courier New", Courier, monospace;
+    font-weight: bold;
+}
+
+.terminal-user{
+    color: rgb(39, 175, 12);
+    margin-left: 7%;
+    font-size: 20px;
+    font-family: "Courier New", Courier, monospace;
+}
